# ThirdYearProjectNotes

./: Latextest.tex
AerialImage/: AerialMapping.py  ErosionMap.py  ImageProcessingAgain.py  ImageSegmentation.py  OpenCV3.py  PILColours.py  SciKitDelin.py  UnetMapping.py  openCV.py  openCV2.py  outlineToPoints.py  rioxarry.py  rsgMapping.py  scikitMapping.py  semseg.py  skActiveContour.py  skApproxAndSubPoly.py  skCanny2.py  skEdge.py  skImageCannyTrials.py  skImageMethodTrials.py  skProbHough.py  skRidge.py
AerialImage/CNN/: CNNRMask.py  GolfCourse.geojson  MaskRCNNDemo.py
AerialImage/imgs/: AdobeGold.tif  map1.tif
AerialImage/imgs/.comments/: overheadGolf1.jpg.xml
Latex/: Tut6.aux  Tut6.blg  Tut6.tex  marksheetlitrev.tex  test.aux  test.dvi  test.tex
Latex/LitReview/: LitReview.aux  LitReview.blg  LitReview.tex  ProgressReport.aux  cmpreport.cls  marksheetlitrev.tex  reportbib.bib  template.aux  template.bbl  template.blg  template.dvi  template.out.ps  template.tex
Latex/ProgressReport/: ProgressReport.aux  ProgressReport.bbl  ProgressReport.bib  ProgressReport.blg  ProgressReport.dvi  ProgressReport.tex  install.bat  marksheetproposal.tex  testingidk.tex
MCOMP_2023_Eden_Robert_Tye/: MComp Mower Project - Setup.md
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawn-Mower-Application-main/: README.md  local.properties  pubspec.yaml
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawn-Mower-Application-main/lib/: camera_ortho.dart  capture_map.dart  confirmation_screen.dart  editor.dart  login_screen.dart  main.dart  mower.dart  region.dart  tutorial_alert.dart
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawn-Mower-Application-main/linux/: CMakeLists.txt  my_application.cc
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawn-Mower-Application-main/test/: widget_test.dart
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawn-Mower-Application-main/web/: index.html  manifest.json
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawn-Mower-Application-main/windows/: CMakeLists.txt
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawnmower-system-main/: .gitignore  Calibration.md  README.md  Robot Microcontroller Firmware.md
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawnmower-system-main/Microcontroller/: ICM-20948 Dev Workspace.code-workspace  IMU Calibration.code-workspace  Motor PID Dev Workspace.code-workspace  Robot Sensor Motor Controller - DMP.code-workspace  Robot Sensor Motor Controller.code-workspace
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawnmower-system-main/install/: local_setup.sh  setup.sh
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawnmower-system-main/install/robot_motor_control_py/share/robot_motor_control_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawnmower-system-main/log/: latest_build
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawnmower-system-main/ros_mower_robot_ws/src/path_nav/: package.xml  setup.cfg  setup.py
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawnmower-system-main/ros_mower_robot_ws/src/path_nav/path_nav/: lds.py  lidar_sim.py  mower.py
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawnmower-system-main/ros_mower_robot_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
MCOMP_2023_Eden_Robert_Tye/Code (Repos)/Lawnmower-system-main/ros_mower_robot_ws/src/robot_interfaces/msg/: RobotSendCMD.msg
Notes/: Ideas.md  Literature Review.md  Progress Report.md
Pathing/: ConvexHullGrahamScan.py  MapGeneration.py  Mapping.py  Pathing.py  f2cMapping.py  f2cTesting.py
(+307 files in other folders)
